@@ -724,9 +724,10 @@
       "&func.bookmarkOpenTabs;", "&func.bookmarks;", "&func.bookmarksToolbar;",
       "&func.history;", "&func.viewPageSource;", "&func.viewPageInfo;",
       "&func.showOnlyThisFrame;", "&func.properties;", "&func.printPage;",
-      "&func.mail;", "&func.newPrivateWindow;", "&func.cut;", "&func.copy;",
-      "&func.paste;", "&func.undo;", "&func.selectAll;", "&func.toggleFindBar;",
-      "&func.zoomIn;", "&func.zoomOut;", "&func.zoomReset;"
+      "&func.focusLocationBar;", "&func.newPrivateWindow;", "&func.cut;",
+      "&func.copy;", "&func.paste;", "&func.undo;", "&func.selectAll;",
+      "&func.toggleFindBar;", "&func.zoomIn;", "&func.zoomOut;",
+      "&func.zoomReset;"
     );
     
     var eG_PopupImages = new Array(
@@ -748,8 +749,9 @@
       "loadURLScript20", "markVisitedLinks", "bookmarkThisLink", "bookmarkPage",
       "bookmarkOpenTabs", "bookmarks", "bookmarksToolbar", "history",
       "viewPageSource", "viewPageInfo", "showOnlyThisFrame", "properties",
-      "printPage", "mail", "newPrivateWindow", "cut", "copy", "paste", "undo",
-      "selectAll", "toggleFindBar", "zoomIn", "zoomOut", "zoomReset"
+      "printPage", "focusLocationBar", "newPrivateWindow", "cut", "copy",
+      "paste", "undo", "selectAll", "toggleFindBar", "zoomIn", "zoomOut",
+      "zoomReset"
     );
     
     var contextCaption = {
