@@ -77,7 +77,7 @@ viewPageInfo=View Page Info
 showOnlyThisFrame=Zobrazit jen tento rámec
 properties=Vlastnosti
 printPage=Vytisknout stránku
-mail=Email
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 
 cut=Vyjmout
