@@ -56,7 +56,7 @@ viewPageInfo=View Page Info
 showOnlyThisFrame=Nur diesen Frame anzeigen
 properties=Eigenschaften
 printPage=Seite drucken
-mail=E-Mail
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 cut=Ausschneiden
 copy=Kopieren
