@@ -200,7 +200,7 @@ END OF INSTRUCTIONS
 <!ENTITY func.showOnlyThisFrame "Show Only This Frame">
 <!ENTITY func.properties "Properties">
 <!ENTITY func.printPage "Print Page">
-<!ENTITY func.mail "Mail">
+<!ENTITY func.focusLocationBar "Focus Location Bar">
 <!ENTITY func.newPrivateWindow "New Private Window">
 
 <!ENTITY func.cut "Cut">
