@@ -77,7 +77,7 @@ viewPageInfo=View Page Info
 showOnlyThisFrame=Show Only This Frame
 properties=Properties
 printPage=Print Page
-mail=Mail
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 
 cut=Cut
