@@ -70,7 +70,7 @@ viewPageInfo=Ver información de la página
 showOnlyThisFrame=Mostrar sólo este marco
 properties=Propiedades
 printPage=Imprimir página
-mail=Correo
+focusLocationBar = Seleccionar barra de direcciones
 newPrivateWindow = Nueva ventana privada
 cut=Cortar
 copy=Copiar
