@@ -199,7 +199,7 @@ END OF INSTRUCTIONS
 <!ENTITY func.showOnlyThisFrame "Afficher ce cadre seulement">
 <!ENTITY func.properties "Propriétés">
 <!ENTITY func.printPage "Imprimer page">
-<!ENTITY func.mail "Courrier">
+<!ENTITY func.focusLocationBar "Sélectionner la barre d'adresse">
 <!ENTITY func.newPrivateWindow "Nouvelle fenêtre de navigation privée">
 
 <!ENTITY func.cut "Couper">
