@@ -77,7 +77,7 @@ viewPageInfo=Afficher info. page
 showOnlyThisFrame = Afficher ce cadre seulement
 properties=Propri\u00E9t\u00E9s
 printPage=Imprimer page
-mail=Courrier
+focusLocationBar = Sélectionner la barre d'adresse
 newPrivateWindow = Nouvelle fenêtre de navigation priv\u00E9e
 
 cut=Couper
