@@ -69,7 +69,7 @@ viewPageInfo=Oldal tulajdonságainak megtekintése
 showOnlyThisFrame=Csak ezt a keretet mutassa
 properties=Tulajdonságok
 printPage=Oldal nyomtatása
-mail=Levél
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 cut=Kivágás
 copy=Másolás
