@@ -202,7 +202,7 @@ END OF INSTRUCTIONS
 <!ENTITY func.showOnlyThisFrame "Mostra solo questa Frame">
 <!ENTITY func.properties "Proprietà">
 <!ENTITY func.printPage "Stampa Pagina">
-<!ENTITY func.mail "Mail">
+<!ENTITY func.focusLocationBar "Focus Location Bar">
 <!ENTITY func.newPrivateWindow "New Private Window">
 
 <!ENTITY func.cut "Taglia">
