@@ -63,7 +63,7 @@ viewPageInfo=View Page Info
 showOnlyThisFrame=Mostra solo questa Frame
 properties=Proprietà
 printPage=Stampa Pagina
-mail=Mail
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 
 cut=Taglia
