@@ -201,7 +201,7 @@ END OF INSTRUCTIONS
 <!ENTITY func.showOnlyThisFrame "このフレームだけを表示">
 <!ENTITY func.properties "プロパティ">
 <!ENTITY func.printPage "ページを印刷">
-<!ENTITY func.mail "メール">
+<!ENTITY func.focusLocationBar "Focus Location Bar">
 <!ENTITY func.newPrivateWindow "New Private Window">
 
 <!ENTITY func.cut "切り取り">
