@@ -77,7 +77,7 @@ viewPageInfo=View Page Info
 showOnlyThisFrame = このフレームだけを表示
 properties=プロパティ
 printPage=ページを印刷
-mail=メール
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 
 cut=切り取り
