@@ -181,7 +181,7 @@ Contains options dialog strings and pie menu tips.
 <!ENTITY func.showOnlyThisFrame "이 프레임만 표시">
 <!ENTITY func.properties "속성">
 <!ENTITY func.printPage "페이지 인쇄">
-<!ENTITY func.mail "메일">
+<!ENTITY func.focusLocationBar "Focus Location Bar">
 <!ENTITY func.newPrivateWindow "New Private Window">
 <!ENTITY func.cut "잘라내기">
 <!ENTITY func.copy "복사">
