@@ -69,7 +69,7 @@ viewPageInfo=페이지 정보 표시
 showOnlyThisFrame=이 프레임 만 표시
 properties=속성
 printPage=페이지 인쇄
-mail=메일
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 cut=잘라내기
 copy=복사
