@@ -164,7 +164,7 @@
 <!ENTITY func.showOnlyThisFrame "Pokaż tylko tę ramkę">
 <!ENTITY func.properties "Właściwości">
 <!ENTITY func.printPage "Drukuj stronę">
-<!ENTITY func.mail "Poczta">
+<!ENTITY func.focusLocationBar "Focus Location Bar">
 <!ENTITY func.newPrivateWindow "New Private Window">
 <!ENTITY func.cut "Wytnij">
 <!ENTITY func.copy "Kopiuj">
