@@ -56,7 +56,7 @@ viewPageInfo=View Page Info
 showOnlyThisFrame=Pokaż tylko tę ramkę
 properties=Właściwości
 printPage=Drukuj stronę
-mail=Poczta
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 
 cut=Wytnij
