@@ -201,7 +201,7 @@ END OF INSTRUCTIONS
 <!ENTITY func.showOnlyThisFrame "Mostrar Somente Este Quadro">
 <!ENTITY func.properties "Propriedades">
 <!ENTITY func.printPage "Imprimir Página">
-<!ENTITY func.mail "Correio">
+<!ENTITY func.focusLocationBar "Focus Location Bar">
 <!ENTITY func.newPrivateWindow "New Private Window">
 
 <!ENTITY func.cut "Recortar">
