@@ -77,7 +77,7 @@ viewPageInfo=View Page Info
 showOnlyThisFrame = Mostrar Somente Este Quadro
 properties=Propriedades
 printPage=Imprimir Página
-mail=Correio
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 
 cut=Recortar
