@@ -164,7 +164,7 @@
 <!ENTITY func.showOnlyThisFrame "Zobraziť len tento rámec">
 <!ENTITY func.properties "Vlastnosti">
 <!ENTITY func.printPage "Tlačiť stránku">
-<!ENTITY func.mail "Pošta">
+<!ENTITY func.focusLocationBar "Focus Location Bar">
 <!ENTITY func.newPrivateWindow "New Private Window">
 <!ENTITY func.cut "Vystrihnúť">
 <!ENTITY func.copy "Kopírovať">
