@@ -56,7 +56,7 @@ viewPageInfo=View Page Info
 showOnlyThisFrame=Zobraziť len tento rámec
 properties=Vlastnosti
 printPage=Vytlačiť stránku
-mail=Pošta
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 
 cut=Vystrihnúť
