@@ -202,7 +202,7 @@ END OF INSTRUCTIONS
 <!ENTITY func.showOnlyThisFrame "Yalnızca Bu Çerçeveyi Göster">
 <!ENTITY func.properties "Özellikler">
 <!ENTITY func.printPage "Sayfayı Yazdır">
-<!ENTITY func.mail "Posta">
+<!ENTITY func.focusLocationBar "Focus Location Bar">
 <!ENTITY func.newPrivateWindow "New Private Window">
 
 <!ENTITY func.cut "Kes">
