@@ -77,7 +77,7 @@ viewPageInfo=View Page Info
 showOnlyThisFrame=Yalnızca Bu Çerçeveyi Göster
 properties=Özellikler
 printPage=Sayfayı Yazdır
-mail=Posta
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 
 cut=Kes
