@@ -202,7 +202,7 @@ END OF INSTRUCTIONS
 <!ENTITY func.showOnlyThisFrame "仅显示此框架">
 <!ENTITY func.properties "属性">
 <!ENTITY func.printPage "打印页面">
-<!ENTITY func.mail "主要">
+<!ENTITY func.focusLocationBar "Focus Location Bar">
 <!ENTITY func.newPrivateWindow "New Private Window">
 
 <!ENTITY func.cut "剪切">
