@@ -77,7 +77,7 @@ viewPageInfo=查看页面信息
 showOnlyThisFrame=只显示此框架
 properties=属性
 printPage=打印页面
-mail=主要
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 
 cut=剪切
