@@ -77,7 +77,7 @@ viewPageInfo=View Page Info
 showOnlyThisFrame = 只顯示本頁框
 properties=屬性
 printPage=列印 
-mail=Mail
+focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
 
 cut=剪下
